<resources>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="on_server">未检测到网络,请检查WiFi或移动数据是否开启,程序将自动退出…</string>
    <string name="user_name">账户</string>
    <string name="auth_code">验证码</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="login_activity">
        <u>注册账号</u>
    </string>
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="user_registered">用户注册</string>
    <string name="phone_registered">手机注册</string>
    <string name="input_auth_code">填写验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_pone">请输入用户名或手机号</string>
    <string name="already_registered">已经注册</string>
    <string name="email_registered">E-mail注册</string>
    <string name="email_reback">E-mail找回</string>
    <string name="regist_ac_support">支持英文和数字，不少于4位</string>
    <string name="regist_ac_support_2">支持英文和数字，不少于6位</string>
    <string name="regist_ac_email">电子邮箱</string>
    <string name="regist_ac_phone">你的手机号码</string>
    <string name="regist_prompt">点击下面的\"注册\"按钮，即表示您同意药管家《使用条款和隐私政策》</string>
    <string name="get_back_password">找回密码</string>
    <string name="get_pass_activity">
        <u>提交完成后请登录E-mail重新设置密码</u>
    </string>
    <string name="submit">提交</string>
    <string name="add_medicine_box">添加药盒</string>
    <string name="switch_medicine_box">切换药盒</string>
    <string name="add_medicine_ac">点击\"下一步\"后请长按药盒背部的AT键嘀声后松开</string>
    <string name="next">下一步</string>
    <string name="retry">重试</string>
    <string name="tv_qr">二维码扫描</string>
    <string name="tv_qrcode_msg">请扫描药盒底部铭牌上的二维码</string>
    <string name="dialog_message">该账号已存在绑定的药盒，是否继续绑定新药盒。</string>
    <string name="switch_the_box">你确定要切换当前药盒吗？</string>
    <string name="complete_information">资料完善</string>
    <string name="modify_information">修改资料</string>
    <string name="box_id">药盒ID</string>
    <string name="box_user_name">药盒使用者姓名</string>
    <string name="box_user_phone">药盒使用者电话</string>
    <string name="date_of_birth">出生年月</string>
    <string name="gender">性别</string>
    <string name="tv_man">男</string>
    <string name="tv_woman">女</string>
    <string name="guardian_1">监护人1</string>
    <string name="guardian_2">监护人2</string>
    <string name="doctor">医生</string>
    <string name="entry">进入药管家</string>
    <string name="necessary">必需填写</string>
    <string name="for_quick_call">用于快捷电话呼叫</string>
    <string name="recommend">建议填写用于快捷电话呼叫</string>
    <string name="take_phone">拍照</string>
    <string name="album">相册</string>
    <string name="photoPickerNotFoundText">手机中无可用的图片</string>
    <string name="give_up_binding">放弃绑定当前药盒</string>
    <string name="continue_up">继续</string>
    <string name="give_up">放弃</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="medical_manager">药管家</string>
    <string name="more">更多</string>
    <string name="setting">设定</string>
    <string name="record">记录</string>
    <string name="me">我的</string>
    <string name="next_medicine_time">距离下次服药</string>
    <string name="A.M">上午</string>
    <string name="Noon">中午</string>
    <string name="P.M">下午</string>
    <string name="bed_time">睡前</string>
    <string name="box_online">药盒在线</string>
    <string name="box_offline">药盒离线</string>
    <string name="set_time">--:--</string>
    <string name="medicine_unit_danwei">PCS</string>
    <string name="medic_times">用药次数</string>
    <string name="date_medic_times">日期和用药次数</string>
    <string name="repeat">重复</string>
    <string name="reminder_time">提醒时间</string>
    <string name="medicine">药物</string>
    <string name="add_medicine">添加药物</string>
    <string name="added">已添药物</string>
    <string name="important_notification">重要提示</string>
    <string name="important_message">未选中时间段数据将被清空?</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="add">添加药物</string>
    <string name="fill_medicine_name">请使用关键词检索药物名称</string>
    <string name="dosage">单次药物用量</string>
    <string name="cur_medic_repeat">将当前药物重复</string>
    <string name="set_medic_dialog">请填写正确的药物信息:\n
        1.用于为您建立长期准确的服药管理.\n
        2.在您有需要时为医务人员提供您准确的用药情况.</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="abnormal_days_records">异常天数记录:有</string>
    <string name="abnormal_records">日未按时服药</string>
    <string name="normal_medication">正常服药</string>
    <string name="abnormal_medication">服药异常</string>
    <string name="no_setting">未到设定的服药时间</string>
    <string name="cjy_gwang">
        <u>更多记录详情请登陆:采集云官网</u>
    </string>
    <string name="account">账号</string>
    <string name="box_management">药盒管理</string>
    <string name="message_notification">消息通知</string>
    <string name="language_selection">语言选择</string>
    <string name="font">字体大小</string>
    <string name="operational_guidelines">操作指南</string>
    <string name="check_for_updates">检查更新</string>
    <string name="medicine_hamful_feedback">药物不良反馈</string>
    <string name="procedure_feedback">程序意见反馈</string>
    <string name="my_package">我的套餐</string>
    <string name="about_us">关于我们</string>
    <string name="common_use">通用</string>
    <string name="exit">退出登录</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="receiving_message">接收新消息通知</string>
    <string name="sound">声音</string>
    <string name="vibrate">振动</string>
    <string name="following_system">跟随系统</string>
    <string name="chinese">简体中文</string>
    <string name="big">大</string>
    <string name="normal">中</string>
    <string name="small">小</string>
    <string name="latest_version">当前已是最新版本!</string>
    <string name="downloading">正在下载…</string>
    <string name="problem_description">问题说明：请在此处输入问题描述</string>
    <string name="medicine_name">药物名称</string>
    <string name="pharmaceutical">制药公司/厂商</string>
    <string name="disclaimer">免责声明:</string>
    <string name="disclaimer_content">
        对于您反馈的问题我们非常重视！我们会将收集到的药物不良信息反馈给相关的制药公司或者厂商。但我们不保证您反馈的问题会得到解决!
    </string>
    <string name="cellphone_number">E-mail或者手机号码</string>
    <string name="rights_reserved">深圳采集云数据科技有限公司版权所有</string>
    <string name="privacy_rolicy">使用条款和隐私政策</string>
    <string name="after_sales">售后服务: 4006–12320–7</string>
    <string name="technical_support">技术支持: 0755–21507199</string>
    <string name="emergency_call">应急呼叫</string>
    <string name="call">呼叫</string>
    <string name="notification_message">通知消息</string>
    <string name="box_notification_message">我的健康我管理</string>
    <string name="overlook">忽略</string>
    <string name="time_over">未按时服药已超过</string>
    <string name="taking_time">服药时间到</string>
    <string name="minute">分钟</string>
    <string name="Notification_Message">
        <u>测试人名</u>
    </string>
    <string name="NM_time">
        <u>07:10</u>
    </string>
    <string name="NM_minuter">
        <u>15</u>
    </string>
    <string name="MON">周一</string>
    <string name="TUE">周二</string>
    <string name="WED">周三</string>
    <string name="THU">周四</string>
    <string name="FRI">周五</string>
    <string name="SAT">周六</string>
    <string name="SUN">周日</string>
    <string name="box_gsm">1.请确认当前药盒的流量套餐在有效期内\n2.打开智能药盒当时间自动更新后请点击下一步</string>
    <string name="such_as_graphic">如图示</string>
</resources>