<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/text_note_week_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/MON" />

            <TextView
                style="@style/text_note_week_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/TUE" />

            <TextView
                style="@style/text_note_week_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/WED" />

            <TextView
                style="@style/text_note_week_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/THU" />

            <TextView
                style="@style/text_note_week_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/FRI" />

            <TextView
                style="@style/text_note_week_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SAT"
                android:textColor="@android:color/darker_gray" />

            <TextView
                style="@style/text_note_week_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SUN"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_monthfrment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@android:color/white" />

    </LinearLayout>

    <com.cjy.flb.customView.PagerSlidingTabStrip
        android:id="@+id/tabstrip_weekfrment"
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="6.8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/abnormal_days_records"
                android:textSize="?attr/fontsize_1" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="--"
                android:textColor="@android:color/holo_red_light"
                android:textSize="?attr/fontsize_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abnormal_records"
                android:textSize="?attr/fontsize_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/ll_webView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:singleLine="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="?fontsize_1"
                android:textColor="@color/btn_Sgreen_normal"
                android:text="@string/cjy_gwang" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>