<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <TextView android:layout_width="match_parent"
              android:layout_height="@dimen/row_height"
              android:background="@color/bg_flb_name"
              android:gravity="center"
              android:text="@string/notification_message"
              android:textColor="@color/btn_textColor"
              android:textSize="22sp"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="96dp"
                  android:background="@color/main_bground"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:layout_gravity="center_horizontal"
                      android:layout_weight="1"
                      android:gravity="bottom"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_userName"
                      android:text="@string/Notification_Message"
                      android:textColor="@color/body_text_color"
                      android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="4dp"
                      android:layout_marginRight="4dp"
                      android:id="@+id/tv_time"
                      android:text="@string/NM_time"
                      android:textColor="@color/body_text_color"
                      android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/taking_time"
                      android:textColor="@color/body_text_color"
                      android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="0dp"
                      android:layout_gravity="center_horizontal"
                      android:layout_weight="1"
                      android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/time_over"
                      android:textColor="@color/body_text_color"
                      android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="4dp"
                      android:layout_marginRight="4dp"
                      android:text="@string/NM_minuter"
                      android:textColor="@color/body_text_color"
                      android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/minute"
                      android:textColor="@color/body_text_color"
                      android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/row_height"
                  android:background="@color/btn_textColor"
                  android:orientation="horizontal">
        <Button android:id="@+id/btn_call"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/btn_textColor"
                android:textSize="22sp"
                android:layout_marginRight="0.5dp"
                android:background="@drawable/dialog_green_selector"
                android:text="@string/call"/>
        <Button android:id="@+id/btn_ignore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/btn_textColor"
                android:textSize="22sp"
                android:layout_marginLeft="0.5dp"
                android:background="@drawable/dialog_green_selector"
                android:text="@string/overlook"/>
    </LinearLayout>
</LinearLayout>