<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.cjy.flb.activity.PhotoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sex_bg_select"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/take_phone"
            android:textColor="@color/body_text_color"
            android:textSize="@dimen/btn_textSize"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/et_Line"/>
        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sex_bg_select"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/album"
            android:textColor="@color/body_text_color"
            android:textSize="@dimen/btn_textSize"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/et_Line"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sex_bg_select"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/body_text_color"
            android:textSize="@dimen/btn_textSize"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
